tests/sksl/errors/InterfaceBlockWithArrayOfStructOfBool.glsl
### Compilation failed:

error: 6: type 'bool' is not permitted in an interface block
    S[2] data;
    ^^^^^^^^^^
1 error
